@@ -18,6 +18,7 @@ include_once ICMS_ROOT_PATH."/class/xoopsformloader.php";
 
 $invite_form = new XoopsThemeForm(_US_USERINVITE, "userinvite", "invite.php", "post", true);
 $invite_form->addElement(new XoopsFormText(_US_EMAIL, "email", 25, 60, $myts->htmlSpecialChars($email)), true);
+$invite_form->addElement(new IcmsFormCaptcha(_SECURITYIMAGE_GETCODE, "scode"), true);
 $invite_form->addElement(new XoopsFormHidden("op", "finish"));
 $invite_form->addElement(new XoopsFormButton("", "submit", _US_SUBMIT, "submit"));
 
