@@ -32,6 +32,12 @@ case 'finish':
 	if (!$GLOBALS['xoopsSecurity']->check()) {
 	    $stop .= implode('<br />', $GLOBALS['xoopsSecurity']->getErrors())."<br />";
 	}
+		include_once (ICMS_ROOT_PATH ."/class/captcha/captcha.php");
+            $icmsCaptcha = IcmsCaptcha::instance();
+            if(! $icmsCaptcha->verify() ) {
+                   $stop .= $icmsCaptcha->getMessage().'<br />';
+
+            }
 	if (!checkEmail($email)) {
 		$stop .= _US_INVALIDMAIL.'<br />';
 	}
